turbopjp.output
Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration block T_DOT

    3 block: T_BEGIN statement_list T_END

    4 statement_list: statement_list statement
    5               | statement

    6 declaration: T_VAR id_list T_COLON T_INT T_SEMICOLON
    7            | T_VAR id_list T_COLON T_CHAR T_SEMICOLON
    8            | %empty

    9 id_list: T_ID
   10        | id_list T_COMMA T_ID

   11 statement: T_ID T_ASSIGN expression

   12 expression: expression T_ADD term
   13           | expression T_SUB term
   14           | expression T_GT term
   15           | term

   16 term: term T_MUL factor
   17     | term T_DIV factor
   18     | factor

   19 factor: T_LPAREN expression T_RPAREN
   20       | T_ID
   21       | T_NUMBER

   22 untyped_id_list: T_ID
   23                | untyped_id_list T_COMMA T_ID


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PROGRAM (258) 2
T_LPAREN (259) 2 19
T_RPAREN (260) 2 19
T_COMMA (261) 10 23
T_SEMICOLON (262) 2 6 7
T_COLON (263) 6 7
T_DOT (264) 2
T_VAR (265) 6 7
T_BEGIN (266) 3
T_END (267) 3
T_ASSIGN (268) 11
T_MUL (269) 16
T_ADD (270) 12
T_GT (271) 14
T_INT (272) 6
T_SUB (273) 13
T_DIV (274) 17
T_CHAR (275) 7
T_NUMBER (276) 21
T_ID (277) 2 9 10 11 20 22 23


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
program (24)
    on left: 2, on right: 0
$@1 (25)
    on left: 1, on right: 2
block (26)
    on left: 3, on right: 2
statement_list (27)
    on left: 4 5, on right: 3 4
declaration (28)
    on left: 6 7 8, on right: 2
id_list (29)
    on left: 9 10, on right: 6 7 10
statement (30)
    on left: 11, on right: 4 5
expression (31)
    on left: 12 13 14 15, on right: 11 12 13 14 19
term (32)
    on left: 16 17 18, on right: 12 13 14 15 16 17
factor (33)
    on left: 19 20 21, on right: 16 17 18
untyped_id_list (34)
    on left: 22 23, on right: 2 23


State 0

    0 $accept: . program $end

    T_PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    2 program: T_PROGRAM . T_ID $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration block T_DOT

    T_ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: T_PROGRAM T_ID . $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration block T_DOT

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: T_PROGRAM T_ID $@1 . T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration block T_DOT

    T_LPAREN  shift, and go to state 6


State 6

    2 program: T_PROGRAM T_ID $@1 T_LPAREN . untyped_id_list T_RPAREN T_SEMICOLON declaration block T_DOT

    T_ID  shift, and go to state 7

    untyped_id_list  go to state 8


State 7

   22 untyped_id_list: T_ID .

    $default  reduce using rule 22 (untyped_id_list)


State 8

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list . T_RPAREN T_SEMICOLON declaration block T_DOT
   23 untyped_id_list: untyped_id_list . T_COMMA T_ID

    T_RPAREN  shift, and go to state 9
    T_COMMA   shift, and go to state 10


State 9

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list T_RPAREN . T_SEMICOLON declaration block T_DOT

    T_SEMICOLON  shift, and go to state 11


State 10

   23 untyped_id_list: untyped_id_list T_COMMA . T_ID

    T_ID  shift, and go to state 12


State 11

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON . declaration block T_DOT

    T_VAR  shift, and go to state 13

    $default  reduce using rule 8 (declaration)

    declaration  go to state 14


State 12

   23 untyped_id_list: untyped_id_list T_COMMA T_ID .

    $default  reduce using rule 23 (untyped_id_list)


State 13

    6 declaration: T_VAR . id_list T_COLON T_INT T_SEMICOLON
    7            | T_VAR . id_list T_COLON T_CHAR T_SEMICOLON

    T_ID  shift, and go to state 15

    id_list  go to state 16


State 14

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration . block T_DOT

    T_BEGIN  shift, and go to state 17

    block  go to state 18


State 15

    9 id_list: T_ID .

    $default  reduce using rule 9 (id_list)


State 16

    6 declaration: T_VAR id_list . T_COLON T_INT T_SEMICOLON
    7            | T_VAR id_list . T_COLON T_CHAR T_SEMICOLON
   10 id_list: id_list . T_COMMA T_ID

    T_COMMA  shift, and go to state 19
    T_COLON  shift, and go to state 20


State 17

    3 block: T_BEGIN . statement_list T_END

    T_ID  shift, and go to state 21

    statement_list  go to state 22
    statement       go to state 23


State 18

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration block . T_DOT

    T_DOT  shift, and go to state 24


State 19

   10 id_list: id_list T_COMMA . T_ID

    T_ID  shift, and go to state 25


State 20

    6 declaration: T_VAR id_list T_COLON . T_INT T_SEMICOLON
    7            | T_VAR id_list T_COLON . T_CHAR T_SEMICOLON

    T_INT   shift, and go to state 26
    T_CHAR  shift, and go to state 27


State 21

   11 statement: T_ID . T_ASSIGN expression

    T_ASSIGN  shift, and go to state 28


State 22

    3 block: T_BEGIN statement_list . T_END
    4 statement_list: statement_list . statement

    T_END  shift, and go to state 29
    T_ID   shift, and go to state 21

    statement  go to state 30


State 23

    5 statement_list: statement .

    $default  reduce using rule 5 (statement_list)


State 24

    2 program: T_PROGRAM T_ID $@1 T_LPAREN untyped_id_list T_RPAREN T_SEMICOLON declaration block T_DOT .

    $default  reduce using rule 2 (program)


State 25

   10 id_list: id_list T_COMMA T_ID .

    $default  reduce using rule 10 (id_list)


State 26

    6 declaration: T_VAR id_list T_COLON T_INT . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 31


State 27

    7 declaration: T_VAR id_list T_COLON T_CHAR . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 32


State 28

   11 statement: T_ID T_ASSIGN . expression

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    expression  go to state 36
    term        go to state 37
    factor      go to state 38


State 29

    3 block: T_BEGIN statement_list T_END .

    $default  reduce using rule 3 (block)


State 30

    4 statement_list: statement_list statement .

    $default  reduce using rule 4 (statement_list)


State 31

    6 declaration: T_VAR id_list T_COLON T_INT T_SEMICOLON .

    $default  reduce using rule 6 (declaration)


State 32

    7 declaration: T_VAR id_list T_COLON T_CHAR T_SEMICOLON .

    $default  reduce using rule 7 (declaration)


State 33

   19 factor: T_LPAREN . expression T_RPAREN

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    expression  go to state 39
    term        go to state 37
    factor      go to state 38


State 34

   21 factor: T_NUMBER .

    $default  reduce using rule 21 (factor)


State 35

   20 factor: T_ID .

    $default  reduce using rule 20 (factor)


State 36

   11 statement: T_ID T_ASSIGN expression .
   12 expression: expression . T_ADD term
   13           | expression . T_SUB term
   14           | expression . T_GT term

    T_ADD  shift, and go to state 40
    T_GT   shift, and go to state 41
    T_SUB  shift, and go to state 42

    $default  reduce using rule 11 (statement)


State 37

   15 expression: term .
   16 term: term . T_MUL factor
   17     | term . T_DIV factor

    T_MUL  shift, and go to state 43
    T_DIV  shift, and go to state 44

    $default  reduce using rule 15 (expression)


State 38

   18 term: factor .

    $default  reduce using rule 18 (term)


State 39

   12 expression: expression . T_ADD term
   13           | expression . T_SUB term
   14           | expression . T_GT term
   19 factor: T_LPAREN expression . T_RPAREN

    T_RPAREN  shift, and go to state 45
    T_ADD     shift, and go to state 40
    T_GT      shift, and go to state 41
    T_SUB     shift, and go to state 42


State 40

   12 expression: expression T_ADD . term

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    term    go to state 46
    factor  go to state 38


State 41

   14 expression: expression T_GT . term

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    term    go to state 47
    factor  go to state 38


State 42

   13 expression: expression T_SUB . term

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    term    go to state 48
    factor  go to state 38


State 43

   16 term: term T_MUL . factor

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    factor  go to state 49


State 44

   17 term: term T_DIV . factor

    T_LPAREN  shift, and go to state 33
    T_NUMBER  shift, and go to state 34
    T_ID      shift, and go to state 35

    factor  go to state 50


State 45

   19 factor: T_LPAREN expression T_RPAREN .

    $default  reduce using rule 19 (factor)


State 46

   12 expression: expression T_ADD term .
   16 term: term . T_MUL factor
   17     | term . T_DIV factor

    T_MUL  shift, and go to state 43
    T_DIV  shift, and go to state 44

    $default  reduce using rule 12 (expression)


State 47

   14 expression: expression T_GT term .
   16 term: term . T_MUL factor
   17     | term . T_DIV factor

    T_MUL  shift, and go to state 43
    T_DIV  shift, and go to state 44

    $default  reduce using rule 14 (expression)


State 48

   13 expression: expression T_SUB term .
   16 term: term . T_MUL factor
   17     | term . T_DIV factor

    T_MUL  shift, and go to state 43
    T_DIV  shift, and go to state 44

    $default  reduce using rule 13 (expression)


State 49

   16 term: term T_MUL factor .

    $default  reduce using rule 16 (term)


State 50

   17 term: term T_DIV factor .

    $default  reduce using rule 17 (term)
